--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uinsuka-fess",
   "proxy": "https://uinsuka-fess.onrender.com",
-  "homepage": "https://uinsukafess-frontend.vercel.app/",
+  "homepage": "http://localhost:3000",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
